[package]
name = "throw2D"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy_rapier2d = "0.23.0"
bevy-inspector-egui = "0.22.1"
# bevy-inspector-egui-rapier = { version = "0.9", features = ["rapier3d"] } 
bevy_editor_pls = "0.7.0"
bevy_asset_loader = { version = "0.19.1", features = ["standard_dynamic_assets"] }
leafwing-input-manager = "0.11.2"
bevy_mouse_tracking_plugin = "0.7.0"
space_editor = "0.3.0"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1